# raider

./: README.md  to-do.txt
code/opencm/interface/: interface.ino
code/opencm/motion/: motion.ino
code/python/globalRobotExpo-16/: dynamixel.py  main.py  notas.txt  raider.py
doc/dia/: Diagrama1.dia
doc/fritzing/: 2.fzz  esquema.fzz  esquemabueno.fzz  shield.fzz
doc/memoria/: cross_compiling.odt  servos.odt
doc/memoria/TFG/: TFG.aux  TFG.bbl  TFG.blg  TFG.dvi  TFG.lof  TFG.lot  TFG.out  TFG.tex  TFG.toc  agradecimientos.aux  agradecimientos.tex  anexocomponentes.tex  anexoesquematico.aux  anexoesquematico.tex  anexofotolito.aux  anexofotolito.tex  anexopiezas.aux  anexopiezas.tex  anexoplanos.aux  anexoplanos.tex  anexopresupuesto.tex  anexoshield.aux  aplicaciones.aux  aplicaciones.tex  arte.aux  arte.tex  bibliografia.bib  componentes.aux  componentes.tex  conclusion.aux  conclusion.tex  desarrollo.aux  desarrollo.tex  evaluacion.aux  evaluacion.tex  (+22 more)
electronic/: logoraider  shield-SilkS_Back.gbo  shield-SilkS_Front.gto  shield-cache.lib  shield-rutada  shield.000  shield.brd  shield.cmp  shield.net  shield.pro
misc/: TODO.txt  init.sh
parts/scad/: Antebrazo.scad  BeagleCM.scad  Bicep.scad  CabezaV2.scad  CabezaV3.scad  Casquillos.scad  ChasisLifecam.scad  Codo.scad  Cuello2.scad  CuelloV2.scad  Entrepierna.scad  Espalda.scad  Gripper.scad  Pecho.scad  Pierna.scad  PiernaSuperior.scad  PiesV2.scad  PiesV2.stl  PlacaCamara.scad  Protector.scad  PunoBoxeo.scad  SeparadorPierna.scad  SoporteBateria.scad  TapaCabezaV3.scad
parts/step/: antebrazo.step  bracketPierna.step  bracketPiernaD.step  cabeza.step  chasislifecam.step  codoL.step  codoR.step  espalda.step  gripper.step  ingle2.step  pieL.step  pierna1.step  pierna2.step  rodilla2.step  tobillo.step  tobillo2.step
parts/stl/: Antebrazo.stl  BatterySupport.stl  BeagleCM.stl  Brazo.stl  CabezaV2.stl  CabezaV3.stl  Casquillos.stl  ChasisLifecam.stl  Codo.stl  Cuello2.stl  CuelloV2.stl  Entrepierna.stl  Espalda.stl  Gripper.stl  JuntaDeTobillo.stl  Pierna.stl  PiesV2.stl  PlacaCamara.stl  Protector.stl  SeparadorPierna.stl  SoporteBateriaV1.stl  TapaCabezaV1.stl  TapaCabezaV3.stl  body.stl  body_back.stl  bracketPierna.stl  bracketPiernaD.stl  cintura2.stl  codoA.stl  codoB.stl  espalda.stl  face.stl  face2.stl  head.stl  hip_top.stl  hombro.stl  ingle1.stl  ingle2.stl  left_arm.stl  left_elbow.stl  (+15 more)
printable parts/scad/: Cabeza.scad  Entrepierna.scad  Gripper.scad  Hombro.scad  JuntaDeTobillo.scad  Pierna.scad  PunoBoxeo.scad  SoporteBateria.scad
printable parts/stl/: Cuello.stl
programming/: CMakeLists.txt  CMakeLists.txt~
programming/dev/move/: move.ino
programming/opencm/motion/: motion.ino  raider_motion.cpp  raider_motion.h
programming/sandbox/Misc/CM2012/CM2012/: CM2012.ino
programming/sandbox/analog/: a.out  analog.cpp
programming/sandbox/dev/move/: move.ino
programming/sandbox/readeerr/: readeerr.ino
programming/sandbox/serialib/: Example1.cpp  Example1.cpp.autosave
programming/sandbox/serialib/src/: CMakeLists.txt  serialib.cpp  serialib.h
programming/src/: CMakeLists.txt  CMakeLists.txt~
programming/src/apps/: CMakeLists.txt
programming/src/apps/ceabot/: CMakeLists.txt  fight.cpp  navigation.cpp  vision.cpp
programming/src/libraries/: CMakeLists.txt  CMakeLists.txt~
programming/src/libraries/bones/: CMakeLists.txt  bones.cpp  bones.h
programming/src/libraries/compass/: CMakeLists.txt  compass.cpp  compass.h
programming/src/libraries/debug/: CMakeLists.txt  debug.cpp  debug.h
programming/src/libraries/eye/: CMakeLists.txt  eye.cpp  eye.h
programming/src/libraries/i2c/: CMakeLists.txt  i2c.cpp  i2c.h
programming/src/libraries/imu/: imu.cpp  imu.h
programming/src/libraries/motion/: CMakeLists.txt  motion.cpp  motion.h
programming/src/libraries/mpu9150/: CMakeLists.txt  CMakeLists.txt~
programming/src/libraries/raider/: CMakeLists.txt  raider.cpp  raider.h
programming/src/libraries/serialib/: CMakeLists.txt  CMakeLists.txt~  serialib.cpp  serialib.h
programming/src/test/: CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt~  test.cpp  test_auxiliar.cpp  test_communication.cpp  test_compass.cpp  test_fuzzy.cpp  test_gpio.cpp  test_imu.cpp  test_integration.cpp  test_opencv.cpp  test_qr.cpp  test_voronoi.cpp
shield/: $shield.sch  IHpeque  raiderpeque  shield-Back.gbl  shield-Front.gtl  shield-Mask_Back.gbs  shield-PCB_Edges.gbr  shield-cache.lib  shield-drl.ps  shield-rutada.ses  shield.000  shield.bak  shield.brd  shield.drl  shield.dsn  shield.pro  shield.sch  shield.stf
(+131 files in other folders)
