OPTION(TEST_SERIAL "Communication test" 1)
IF (TEST_SERIAL)
add_executable(test_communication test_communication.cpp)
target_link_libraries(test_communication serialib raider bones ${OpenCV_LIBS})
ENDIF ()

OPTION(TEST_OPENCV "Opencv test" 1)
IF (TEST_OPENCV)
add_executable(test_opencv test_opencv.cpp)
target_link_libraries(test_opencv serialib raider bones eye ${OpenCV_LIBS})
ENDIF ()

OPTION(TEST_INTEGRATION "Integration test" 1)
IF (TEST_INTEGRATION)
add_executable(test_integration test_integration.cpp)
target_link_libraries(test_integration serialib raider bones eye ${OpenCV_LIBS})
ENDIF ()

OPTION(TEST_AUXILIAR "Auxiliar, not for Beaglebone" 1)
IF (TEST_AUXILIAR)
add_executable(test_auxiliar test_auxiliar.cpp)
target_link_libraries(test_auxiliar serialib raider bones eye ${OpenCV_LIBS})
ENDIF ()

OPTION(TEST_VORONOI "Thinning algorithms" 1)
IF (TEST_VORONOI)
add_executable(test_voronoi test_voronoi.cpp)
target_link_libraries(test_voronoi serialib raider bones eye ${OpenCV_LIBS})
ENDIF ()
